--- a/InterstellarAssemblyBackend/chat-server/pom.xml
+++ b/InterstellarAssemblyBackend/chat-server/pom.xml
@@ -22,6 +22,16 @@
             <groupId>com.qly</groupId>
             <artifactId>common-start</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>4.4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
