--- a/InterstellarAssemblyBackend/chat-server/pom.xml
+++ b/InterstellarAssemblyBackend/chat-server/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>weixin-java-mp</artifactId>
             <version>4.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
